[package]
name = "asymmetric-crypto"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>", "xujian009 <s1473561555@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4", default-features = false }
rand = "0.7.3"
dislog-hal = { git = "https://github.com/Yinet-project/dislog-hal"}
tiny-keccak = { version = "2.0.0", features = ["sha3"] }
libsm = { git = "https://github.com/Yinet-project/libsm"}
serde = { version = "1.0", features = ["derive"] }


[dev-dependencies]
dislog-hal-sm2 = { git = "https://github.com/Yinet-project/dislog-hal-sm2"}
dislog-hal-curve25519 = { git = "https://github.com/Yinet-project/dislog-hal-curve25519"}
byteorder = "1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test", "run-cargo-clippy"]
